[package]
name = "which-steam-game"
version = "0.1.0"
edition = "2021"
include = [
    "steam_api.dll",
    "src/main.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamworks = "0.10.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"]}
json = "0.12.4"
rand = "0.8.5"