[package]
name = "which-steam-game"
version = "0.2.0"
edition = "2021"
description = "Command line tool to determine which multiplayer/coop steam game you and your friends should play"
license-file = "LICENSE"
repository = "https://github.com/IRSMsoso/which-steam-game/tree/main"
authors = ["Cameron VanderTuig"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steamworks = "0.10.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"]}
json = "0.12.4"
rand = "0.8.5"